--- a/my-app/src/Home.css
+++ b/my-app/src/Home.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     outline: none;
     border: none;
-    font-family: 'Quicksand', sans-serif;
+
 }
 
 html {
@@ -14,13 +14,14 @@ html {
     scroll-behavior: smooth;
     background-color: black;
     color: white;
+    font-family: 'Playfair Display', serif;
 }
 
 header {
     top: 0;
     left: 0;
     right: 0;
-    background: rgb(56, 56, 56);
+    background: black;
     padding: 1.5rem;
     padding-bottom: 0.5rem;
     position: fixed;
@@ -93,9 +94,113 @@ header .navbar a:hover {
     background-color: #272727;
 }
 
-#sushi1 {
+#home {
+    text-align: center;
+    height: 100vh;
+    font-family: 'Cormorant Garamond', serif;
+}
+
+#slider {
+    position: relative;
+    max-width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#description {
     width: 100%;
-    height: auto;
+    position: absolute;
+    text-align: center;
+    right: 0;
+    font-size: 1vw;
+    top: 88%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-shadow: 3px 3px #000000;
+    opacity: 0;
+    animation-delay: 2s;
+    animation: fadeIn 2.5s;
+    -webkit-animation: fadeIn 2.5s;
+    -moz-animation: fadeIn 2.5s;
+    -o-animation: fadeIn 2.5s;
+    -ms-animation: fadeIn 2.5s;
+    animation-fill-mode: forwards;
+}
+
+#description.show {
+    opacity: 1;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@-moz-keyframes fadeIn {
+    from {
+        opacity: 0
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@-o-keyframes fadeIn {
+    from {
+        opacity: 0
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@-ms-keyframes fadeIn {
+    from {
+        opacity: 0
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+.carousel-boullt {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.carousel-boullt span {
+    width: 45px;
+    height: 12px;
+    background-color: white;
+    margin-left: 10px;
+    border-radius: 10px;
+}
+
+#menu {
+    display: block;
+    margin-top: 10vw;
 }
 
 #menuImg1 {
@@ -140,6 +245,7 @@ header .navbar a:hover {
 }
 
 #drinkMenu {
+    z-index: 999;
     background-color: #014b1c;
     color: rgb(255, 255, 255);
     font-size: 1.2vw;
@@ -168,11 +274,19 @@ header .navbar a:hover {
 
 #aboutUs {
     position: relative;
+    height: 90vh;
+    overflow: hidden;
+    margin-bottom: 1vw;
 }
 
 #aboutUsImg {
     z-index: 1;
-    max-width: 100%;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 #aboutUsMobile {
@@ -180,13 +294,16 @@ header .navbar a:hover {
 }
 
 #openingHours {
+    z-index: 2;
     position: absolute;
     top: 18vw;
     left: 9vw;
     font-size: 1.2vw;
     text-align: center;
     line-height: 2.1vw;
-
+    top: 50%;
+    left: 15%;
+    transform: translate(-50%, -50%);
 }
 
 #openingHours h3 {
@@ -203,15 +320,17 @@ header .navbar a:hover {
 }
 
 #contact {
+    z-index: 2;
     padding-top: 0.5vw;
     padding-bottom: 1vw;
     position: absolute;
-    background-color: #000000;
+    background-color: transparent;
     color: rgb(255, 255, 255);
     width: 100%;
     text-align: center;
-    top: 46vw;
+    top: 90%;
     font-size: 1.2vw;
+
 
 }
 
@@ -223,9 +342,8 @@ header .navbar a:hover {
 
 #icons {
     position: absolute;
-    bottom: 0vw;
+    bottom: 1vw;
     right: 2vw;
-
 }
 
 #icons i {
@@ -263,12 +381,6 @@ header .navbar a:hover {
         margin-right: 0.5rem;
         width: 35px;
         height: auto;
-    }
-
-    #sushi1 {
-        padding-top: 10vw;
-        padding-bottom: 10vw;
-        width: 100%;
     }
 
     #menu {
@@ -327,7 +439,9 @@ header .navbar a:hover {
 }
 
 @media (max-width:480px) {
-
+html{
+    scroll-padding-top: 1.5rem;
+}
     header {
         padding: 0rem;
         padding-bottom: 0rem;
@@ -337,9 +451,18 @@ header .navbar a:hover {
         display: block;
     }
 
-    #sushi1 {
-        padding-top: 80vw;
-        padding-bottom: 80vw;
+    #home {
+        padding-bottom: 60vw;
+        
+    }
+    #description {
+        width: 100%;
+        position: absolute;
+        text-align: center;
+        top: 60%;
+        left: 50%;
+        font-size: 2vw;
+
     }
 
     #menu {
@@ -357,7 +480,9 @@ header .navbar a:hover {
     #menuImg2 {
         padding: 0;
         display: block;
+        margin-top: -30vw;
     }
+
 
     #omakase,
     #menu p,
@@ -381,7 +506,7 @@ header .navbar a:hover {
     }
 
     #setdinner {
-        padding-top: 7vw;
+        padding-top: 8vw;
     }
 
     #dinnerPrice {
@@ -394,6 +519,8 @@ header .navbar a:hover {
         align-items: center;
         text-align: center;
         font-size: 3vw;
+        position:relative;
+        
     }
 
     #aboutUsImg {
@@ -405,8 +532,8 @@ header .navbar a:hover {
     #aboutUsMobile {
         display: flex;
         max-width: 100%;
-        padding-top: 70vw;
-        padding-bottom: 60vw;
+        padding-top:53vw;
+        padding-bottom: 0vw;
 
     }
 
@@ -418,6 +545,7 @@ header .navbar a:hover {
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: flex-start;
+        height: 100vh;
     }
 
     #openingHours,
@@ -428,29 +556,33 @@ header .navbar a:hover {
         line-height: 6vw;
         padding: 0;
         margin: 0;
+        
     }
 
     #openingHours {
         padding-top: 10vw;
         left: 50%;
         transform: translateX(-50%);
+        top: 3%;
     }
 
     #contact {
         align-self: flex-start;
-        margin-top: 110vw;
+        line-height: 6vw;
+        margin-top: 130vw;
+        top: 0%;
     }
 
     #icons {
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
-        top: 110%;
 
     }
 
     #icons i {
-        padding: 0 1vw;
+        padding: 0 10vw;
         font-size: 6vw;
+        
     }
 }
