--- a/my-app/src/Home.css
+++ b/my-app/src/Home.css
@@ -9,7 +9,7 @@
 
 html {
     overflow-x: hidden;
-    scroll-padding-top: 70px;
+    scroll-padding-top: 0px;
     /* save space for navbar */
     scroll-behavior: smooth;
     background-color: black;
@@ -44,16 +44,14 @@ header .logo {
     width: 50px;
     height: 50px;
     margin-top: -10px;
-
 }
 
 .navbar {
     float: right;
-
 }
 
 header .navbar a {
-    font-size: 20px;
+    font-size: 18px;
     float: left;
     border-radius: 0.5rem;
     padding: 0.5rem 2rem;
@@ -126,7 +124,6 @@ header .navbar a:hover {
     height: 100%;
     width: 100%;
     overflow: hidden;
-
 }
 
 .image-container {
@@ -186,57 +183,92 @@ header .navbar a:hover {
     animation-fill-mode: forwards;
     font-style: italic;
 }
+
 @keyframes fadeIn {
     from {
         opacity: 0
-      }
-      to {
+    }
+
+    to {
         opacity: 1
-      }
+    }
 }
 
-#slider {
-    position: relative;
-    max-width: 100%;
+.menu {
     height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
-#menu {
+.menu-container {
+    display: grid;
+
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    align-items: center;
+}
+
+#grid1 {
+    overflow: hidden;
+    position: relative;
+}
+
+#grid1 p {
+    z-index: 1000;
+    color: white;
+    position: absolute;
+    top: 20%;
+    left: 33%;
+    font-size: 1.8vw;
+    font-style: italic;
+    font-weight: bold;
+}
+
+#grid1 p::after {
+    content: "";
     display: block;
-    margin-top: 10vw;
+    width: 8em;
+    max-width: 73%;
+    border-bottom: 0.17em solid #BF7534;
+    margin: 0.4em 0;
 }
 
 #menuImg1 {
-    max-width: 50%;
-    float: left;
-    margin-top: 0;
+    max-width: 100%;
+    max-height: auto;
+    object-fit: cover;
+    align-items: center;
+    display: block;
+    margin: 0 auto;
+    opacity: 85%;
+    transform-origin: 65% 75%;
+    transition: transform 1s, filter .5s ease-out;
+    cursor: zoom-in;
+}
+
+#menuImg1:hover {
+    transform: scale(1.3);
+    overflow: hidden;
+    opacity: 100%;
 }
 
 #omakase {
-    padding-left: 27.8%;
+    text-align: right;
     padding-top: 4%;
-    display: inline-block;
-    vertical-align: top;
+    padding-right: 15%;
     font-size: 1.4vw;
 }
 
-#menu p {
-    width: 40%;
+#grid2 p {
+    width: 100%;
     text-align: justify;
     line-height: 3vw;
-    vertical-align: top;
-    display: inline-block;
-    padding-left: 5vw;
+    padding-left: 15%;
+    padding-right: 15%;
     padding-top: 1rem;
     font-size: 1.2vw;
 }
 
 #setdinner {
-    margin-top: 13%;
-    padding-left: 12vw;
+    padding-left: 25%;
     text-decoration: underline;
     font-size: 1.4vw;
     font-weight: bold;
@@ -246,43 +278,83 @@ header .navbar a:hover {
     padding-top: 0.5rem;
     list-style: none;
     line-height: 2.5vw;
-    padding-left: 12vw;
+    padding-left: 25%;
     font-size: 1.2vw;
 }
 
 #drinkMenu {
     z-index: 999;
-    background-color: #014b1c;
+    background-color: #A67153;
     color: rgb(255, 255, 255);
     font-size: 1.2vw;
     margin-top: 1rem;
     margin-left: 12vw;
-    border-radius: 0.3rem;
-    padding: 0.5rem 1rem;
+    border-radius: 1vw;
+    padding: 0.5vw 1.2vw;
     cursor: pointer;
     margin-bottom: 8%;
+    font-family: 'Playfair Display', serif;
 }
 
 #drinkMenu:hover {
-    background-color: #003313;
+    background-color: #565902;
+}
+
+.modal-content {
+    position: absolute;
+    z-index: 9999;
+    padding-top: 70px;
+    top: 100%;
+    left: 10%;
+    right: 10%;
+    bottom: 10%;
+    max-width: 100%;
+}
+
+#grid4 {
+    overflow: hidden;
+    position: relative;
+}
+
+#grid4 p {
+    z-index: 1000;
+    color: white;
+    position: absolute;
+    right: 15%;
+    top: 40%;
+    font-size: 1.8vw;
+    font-style: italic;
+    font-weight: bold;
+}
+
+#grid4 p::after {
+    content: "";
+    display: block;
+    width: 8em;
+    max-width: 92%;
+    border-bottom: 0.17em solid #7C8C03;
+    margin: 0.4em 0;
 }
 
 #menuImg2 {
-    margin-top: -21vw;
-    max-width: 50%;
-    float: right;
+    max-width: 100%;
+    max-height: auto;
+    display: block;
+    margin: 0 auto;
+    transition: transform .5s, filter 1s ease-in-out;
+    filter: grayscale(40%);
+    cursor: zoom-in;
 }
 
-.menu-container {
-    display: flex;
-    flex-direction: row;
+#menuImg2:hover {
+    filter: grayscale(0);
+    transform: scale(1.1);
 }
 
 #aboutUs {
     position: relative;
     height: 100vh;
     overflow: hidden;
-  
 }
 
 #aboutUsImg {
@@ -326,15 +398,16 @@ header .navbar a:hover {
 
 #contact {
     z-index: 2;
-    padding-top: 0.5vw;
+    position: relative;
     padding-bottom: 1vw;
     position: absolute;
     background-color: transparent;
     color: rgb(255, 255, 255);
     width: 100%;
     text-align: center;
-    top: 90%;
+    top: 85%;
     font-size: 1.2vw;
+
 }
 
 #contact a {
@@ -342,6 +415,8 @@ header .navbar a:hover {
     text-decoration: underline;
     background-color: transparent;
 }
+
+#contact p {}
 
 #icons {
     position: absolute;
@@ -453,45 +528,53 @@ header .navbar a:hover {
     #menu-icon {
         display: block;
     }
-#bookNow{
-    color: #e90c00;
-}
-#bookNow:hover{
-    color: #ffffff;
-    background-color: #6f0a04;
-}
-    .swiper-slide-title{
-       bottom: 4%;
+
+    #bookNow {
+        color: #e90c00;
+    }
+
+    #bookNow:hover {
+        color: #ffffff;
+        background-color: #6f0a04;
+    }
+
+    .swiper-slide-title {
+        bottom: 4%;
         font-size: 4.5vw;
     }
+
     .swiper .swiper-pagination {
         position: absolute;
         padding-bottom: 55vw;
 
     }
+
     .swiper .swiper-button-prev,
     .swiper .swiper-button-next {
         display: none;
-    }
-    
-    #menu {
-        padding: 0;
     }
 
     #menuImg1,
     #menuImg2 {
         max-width: 100%;
-        margin-top: 0;
-        text-align: center;
-        display: block;
+        z-index: -999;
+        opacity: 1;
+    }
+
+    #grid4 {
+        overflow: visible;
+    }
+
+    #grid1 p,
+    #grid4 p {
+        display: none;
     }
 
     #menuImg2 {
-        padding: 0;
-        display: block;
-        margin-top: -30vw;
+        position: relative;
+        margin-top: -40vw;
+        filter: grayscale(0);
     }
-
 
     #omakase,
     #menu p,
@@ -503,6 +586,11 @@ header .navbar a:hover {
         text-align: center;
         font-size: 3vw;
         line-height: 6vw;
+    }
+
+    .menu-container {
+        display: block;
+        position: relative;
     }
 
     #omakase {
@@ -519,7 +607,10 @@ header .navbar a:hover {
     }
 
     #dinnerPrice {
-        padding-bottom: 5vw;
+        margin: 0 auto;
+        display: block;
+        padding-bottom: 10vw;
+
     }
 
     #drinkMenu {
@@ -541,7 +632,7 @@ header .navbar a:hover {
     #aboutUsMobile {
         display: flex;
         max-width: 100%;
-        padding-top: 53vw;
+        padding-top: 55vw;
         padding-bottom: 0vw;
     }
 
@@ -560,7 +651,7 @@ header .navbar a:hover {
     #contact,
     #icons {
         text-align: center;
-        font-size: 3vw;
+        font-size: 3.5vw;
         line-height: 6vw;
         padding: 0;
         margin: 0;
@@ -568,16 +659,18 @@ header .navbar a:hover {
     }
 
     #openingHours {
-        padding-top: 10vw;
+        padding-top: 17vw;
         left: 50%;
         transform: translateX(-50%);
         top: 3%;
     }
 
+    .fa-phone-hangup {}
+
     #contact {
         align-self: flex-start;
         line-height: 6vw;
-        margin-top: 130vw;
+        margin-top: 137vw;
         top: 0%;
     }
 
