--- a/my-app/src/Booking.css
+++ b/my-app/src/Booking.css
@@ -1,147 +1,95 @@
-.container {
-    background-image: url('/public/booknow.jpeg');
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-    
+
+#reservation {
+    align-content: center;
+    color: white;
+    margin-top: 80px;
+    min-height: 75vh;
 }
 
-#form {
-    color: black;
-    text-align: center;
-    margin-left: 62vw;
-    margin-right: 8vw;
-    padding-top: 2vw;
-    padding-bottom: 2vw;
-    background-color: antiquewhite;
-    padding-left: 3vw;
-    padding-right: 3vw;
+#reservation .container {
+    padding: 3.5rem 5rem;
+    display: flex;
+    justify-content: center;
+}
+
+#reservation .row {
+    display: flex;
+}
+
+.reservation-box h3, .confirmation-box h3 {
+    color: #C6AC8E;
+    line-height: 35px;
+    padding-top: 60px;
 
 }
 
-#form h2 {
-    font-size: 1.2rem;
-    padding-bottom: 1vw;
+.reservation-box p, .confirmation-box p {
+    line-height: 45px;
+}
+
+#reservation .reservation-box,
+#reservation .reservation-form {
+   
+    float: left;
+    padding: 0 40px;
 
 }
 
-#form label {
-    text-align: center;
+.form-container {
+    width: 525px;
+    height: auto;
+    background-color: #ffffff;
+    border-radius: 5px;
 }
 
-#date {
-    text-align: center;
-    align-items: center;
-}
-
-#box {
-    padding-top: 0.5vw;
-}
-
-
-#submit {
-    background-color: rgb(246, 224, 195);
-    color: rgb(0, 0, 0);
-    font-size: 1rem;
-    margin-top: 1rem;
-    border-radius: 0.3rem;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-}
-
-#submit:hover {
-    background-color: rgb(245, 217, 180);
-}
-
-#bookingOpeningHours h3{
-    text-decoration: underline;
-    padding-bottom: 1vw;
-    
-}
-#bookingOpeningHours{
-    padding-top: 1vw;
-    padding-left: 55vw;
-    position: relative;
-    font-size: 1.1rem;
-    color: #ffffff;
+.confirmation-box{
     text-align: center;
 }
 
-#bookingOpeningHours #weekend {
-    padding-top: 1vw;
-  
-}
+@media (max-width:1024px) {
 
-#bookingOpeningHours li {
-    list-style-type: none;
-}
-
-
-#bookingContact {
-      z-index: 2;
-    padding-top: 0.5vw;
-    padding-bottom: 1vw;
-    position: absolute;
-    background-color: transparent;
-    color: rgb(255, 255, 255);
-    width: 100%;
-    text-align: center;
-    top: 90%;
-    font-size: 1.2vw;
-}
-
-#bookingContact a {
-    color: rgb(255, 255, 255);
-    text-decoration: underline;
-    background-color: transparent;
-}
-
-@media (max-width:480px) {
-    .container {
-        background-image: url('/public/booknow1.jpeg');
-        background-position: center;
-    
-    }
-
-    #form {
-        margin: -8vw 8vw;
-        top: 0%;
-
-    }
-    #bookingOpeningHours h3{
-        text-decoration: underline;
-    }
-    #bookingOpeningHours{
-        padding: 0;
+    #reservation .row {
+        display: block;
         text-align: center;
-        line-height: 6vw;
-        position: relative;
-        font-size: 3.5vw;
-        padding-top: 13vw;
-        color: rgb(255, 255, 255);
-        text-shadow: 2px 2px #020202;
-        font-weight: bold;
-    }
-   #bookingContact {
- 
-        background-color: transparent;
-        align-self: flex-start;
-        line-height: 6vw;
-        top: 0%;
-        margin-top: 150vw;
-        font-size: 3.5vw;
-    }
-    #icons{
-        position: relative;
-        left: 50%;
-        transform: translateX(-50%);
-        top: 100%;
-        padding-top: 2vw;
-        
-    }
-    #icons i {
-        padding: 0vw 10vw;
-        
     }
 
+    #reservation .reservation-box,
+    #reservation .reservation-form {
+        width: 100%;
+        float: none;
+        padding-bottom: 40px;
+        padding: 0;
+    }
+
+    .reservation-box h3 {
+        color: #C6AC8E;
+        line-height: 35px;
+        padding-top: 0px;
+    }
+
+    .form-container{
+        margin-top: 30px;
+    }
+
+    #reservation .container{
+        padding-bottom: 0;
+    }
+    .form-container{
+        width: auto;
+        }
+}
+@media (max-width:768px){
+
+}
+@media (max-width:480px) {
+
+    #reservation .container {
+        padding: 0 30px;
+    }
+
+}
+@media (max-width: 1439px) {
+    #footer {
+        position: relative;
+    }
 }
