--- a/my-app/src/Home.css
+++ b/my-app/src/Home.css
@@ -14,68 +14,72 @@ html {
     scroll-behavior: smooth;
     background-color: black;
     color: white;
-    font-family: 'Playfair Display', serif;
+    font-family: "Fira Sans", sans-serif;
+    font-weight:200;
 }
 
 header {
     top: 0;
-    left: 0;
-    right: 0;
+    width: 100%;
     background: black;
     padding: 1.5rem;
-    padding-bottom: 0.5rem;
     position: fixed;
     z-index: 9999;
 }
 
-header .logo {
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: 0.5rem;
-    position: block;
-    color: white;
-    font-size: 20px;
-    text-decoration: none;
+header .nav {
+    display: flex;
+    max-width: 1200px;
+    float: right;
+    margin-right: 10px;
+    text-align: center;
 }
 
 #logoImg {
-    float: left;
-    width: 50px;
-    height: 50px;
-    margin-top: -10px;
+    width: 140px;
+    height: auto;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .navbar {
-    float: right;
+    display: flex;
+    align-items: center;
 }
 
 header .navbar a {
-    font-size: 18px;
+    font-size: 16px;
     float: left;
-    border-radius: 0.5rem;
     padding: 0.5rem 2rem;
+    margin-right: 5px;
     color: white;
     text-align: center;
     text-decoration: none;
 }
 
 header .navbar a.active {
-    text-decoration: underline;
+    
 }
 
-.button {
-    background-color: #A53714;
+#bookNow {
+    border-style: solid;
+    border-color: #C6AC8E;
+    padding: 15px 20px;
+    border-radius: 5px;
+    color: white;
 }
 
 #bookNow:hover {
-    background-color: #7f290f;
+    background-color: #C6AC8E;
+    text-decoration: none;
+    
 }
-
+/*background-color: #434343;*/
 header .navbar a:hover {
-    background-color: #434343;
-    border: 2rem;
     cursor: pointer;
+    text-decoration: underline;
+    text-underline-offset: 8px;
 }
 
 #menu-icon {
@@ -193,14 +197,12 @@ header .navbar a:hover {
         opacity: 1
     }
 }
-
 .menu {
     height: 100vh;
 }
 
 .menu-container {
     display: grid;
-
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     align-items: center;
@@ -241,7 +243,7 @@ header .navbar a:hover {
     opacity: 85%;
     transform-origin: 65% 75%;
     transition: transform 1s, filter .5s ease-out;
-    cursor: zoom-in;
+    
 }
 
 #menuImg1:hover {
@@ -254,7 +256,7 @@ header .navbar a:hover {
     text-align: right;
     padding-top: 4%;
     padding-right: 15%;
-    font-size: 1.4vw;
+    font-size: 18px;
 }
 
 #grid2 p {
@@ -264,13 +266,11 @@ header .navbar a:hover {
     padding-left: 15%;
     padding-right: 15%;
     padding-top: 1rem;
-    font-size: 1.2vw;
 }
 
 #setdinner {
     padding-left: 25%;
-    text-decoration: underline;
-    font-size: 1.4vw;
+    font-size: 18px;
     font-weight: bold;
 }
 
@@ -279,28 +279,27 @@ header .navbar a:hover {
     list-style: none;
     line-height: 2.5vw;
     padding-left: 25%;
-    font-size: 1.2vw;
 }
 
 #drinkMenu {
     z-index: 999;
-    background-color: #A67153;
-    color: rgb(255, 255, 255);
-    font-size: 1.2vw;
+    background-color: #C6AC8E; 
     margin-top: 1rem;
     margin-left: 12vw;
-    border-radius: 1vw;
-    padding: 0.5vw 1.2vw;
+    border-radius: 5px;
+    padding: 10px 40px;
     cursor: pointer;
     margin-bottom: 8%;
-    font-family: 'Playfair Display', serif;
+
 }
-#drinkMenu a{
+
+#drinkMenu a {
     text-decoration: none;
-    color: white;
+    color:#000000;
 }
+
 #drinkMenu:hover {
-    background-color: #565902;
+    background-color: #b18b5f;
 }
 
 .modal-content {
@@ -345,8 +344,7 @@ header .navbar a:hover {
     display: block;
     margin: 0 auto;
     transition: transform .5s, filter 1s ease-in-out;
-    filter: grayscale(40%);
-    cursor: zoom-in;
+    filter: grayscale(25%);
 }
 
 #menuImg2:hover {
@@ -373,75 +371,71 @@ header .navbar a:hover {
     display: none;
 }
 
-#openingHours {
-    z-index: 2;
-    position: absolute;
-    top: 18vw;
-    left: 9vw;
-    font-size: 1.2vw;
+
+#footer{
+    background-color: #131313;
+    margin-top: 0px;
+    padding: 50px 0;
+}
+
+.footerLogoContainer{
+    display: flex;
+    justify-content: center;
+}
+
+#footerLogo{
+    display: flex;
+    justify-content: center;
+    width: 130px;
+    margin-bottom: 35px;
+}
+.contactWrap .row{
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+}
+.contactWrap .row-title{
+    font-weight: 600;
     text-align: center;
-    line-height: 2.1vw;
-    top: 50%;
-    left: 15%;
-    transform: translate(-50%, -50%);
+}
+.contactWrap .col{
+float: left;
+width: 33.33%;
+padding: 0px 60px;
+text-align: center;
+}
+.contactWrap .col .row-title{
+    padding-bottom: 10px;
 }
 
-#openingHours h3 {
-    text-decoration: underline;
-    padding-bottom: 1vw;
-}
-
-#openingHours #weekend {
-    padding-top: 1vw;
-}
-
-#openingHours li {
+#openingHours li, #contact li{
     list-style-type: none;
+    padding-bottom: 10px;
 }
-
-#contact {
-    z-index: 2;
-    position: relative;
-    padding-bottom: 1vw;
-    position: absolute;
-    background-color: transparent;
-    color: rgb(255, 255, 255);
-    width: 100%;
+.vl {
+    border-left: 2px solid rgb(68, 68, 68);
+    height: 80px;
     text-align: center;
-    top: 85%;
-    font-size: 1.2vw;
+  }
 
+#icons{
+    display: flex;
+    justify-content: center;
 }
-
-#contact a {
-    color: rgb(255, 255, 255);
-    text-decoration: underline;
-    background-color: transparent;
-}
-
-#contact p {}
-
-#icons {
-    position: absolute;
-    bottom: 1vw;
-    right: 2vw;
-}
-
-#icons i {
-    padding-left: 1vw;
-    font-size: 2vw;
-    color: #fff7e5;
+  #icons i {
+    padding: 0 8px;
+    font-size: 22px;
+    color: #e5e5e5;
     cursor: pointer;
 }
 
 #icons i:hover {
-    color: #a3c0ff;
+    color: #a8a8a8;
 }
-
 @media (max-width:1024px) {
     header {
         padding: 0.7rem;
-        padding-bottom: 0rem;
+        padding-bottom: 1.5rem;
     }
 
     header .navbar a {
@@ -451,30 +445,70 @@ header .navbar a:hover {
         text-align: center;
     }
 
+    #logoImg {
+        padding-top: 1rem;
+    }
+
     header .logo {
         margin-top: -2px;
         float: left;
         font-size: 18px;
     }
 
-    #logoImg {
-        padding: 0.2rem 0rem;
-        margin-right: 0.5rem;
-        width: 35px;
-        height: auto;
+    header .navbar.active {
+        width: 100%;
     }
+
+    #menu-icon {
+        display: block;
+    }
+
+
+    header .navbar {
+        display: block;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background-color: #000000;
+        width: 0;
+        overflow: hidden;
+        padding: 20px 0;
+    }
+
+    header .navbar a {
+        display: block;
+        width: 100%;
+        padding: 0.5rem 0;
+        margin: 0.5rem 0;
+        font-size: 15px;
+        background-color: #000000;
+    }
+
+.bookingButton{
+    display: block;
+    margin: auto;
+    width: fit-content;
+    
+}
+
+#bookNow{
+    width: auto;
+}
 
     #menu {
         padding-top: 10vw;
         padding-bottom: 10vw;
     }
 
+
+
 }
 
 @media (max-width:768px) {
     header {
         padding: 0;
-        padding-bottom: 0;
+        padding-bottom: 10px;
     }
 
     header .logo {
@@ -484,37 +518,27 @@ header .navbar a:hover {
     }
 
     #logoImg {
-        margin-left: 0.7rem;
-        margin-right: 0.5rem;
-        width: 35px;
-        height: auto;
+        padding-top: 1rem;
+        width: 100px;
     }
 
-    header .navbar {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        right: 0;
-        background-color: #272727;
-        width: 0;
-        overflow: hidden;
+
+#footer{
+    margin-top: 30px;
+    padding: 10vw ;
+}
+    .contactWrap .row{
+        display:block;
+
     }
 
-    header .navbar.active {
+    .contactWrap .col{
+        float: none;
         width: 100%;
+        padding: 20px 0px;
     }
-
-    header .navbar a {
-        display: block;
-        width: 100%;
-        padding: 0.5rem;
-        margin: 0.5rem;
-        font-size: 15px;
-        background-color: #272727;
-    }
-
-    #menu-icon {
-        display: block;
+    .vl{
+        display: none;
     }
 }
 
@@ -525,20 +549,11 @@ header .navbar a:hover {
 
     header {
         padding: 0rem;
-        padding-bottom: 0rem;
+        padding-bottom: 10px;
     }
 
     #menu-icon {
         display: block;
-    }
-
-    #bookNow {
-        color: #e90c00;
-    }
-
-    #bookNow:hover {
-        color: #ffffff;
-        background-color: #6f0a04;
     }
 
     .swiper-slide-title {
@@ -587,7 +602,7 @@ header .navbar a:hover {
         margin: 0;
         width: 100%;
         text-align: center;
-        font-size: 3vw;
+       
         line-height: 6vw;
     }
 
@@ -650,32 +665,9 @@ header .navbar a:hover {
         height: 100vh;
     }
 
-    #openingHours,
-    #contact,
-    #icons {
-        text-align: center;
-        font-size: 3.5vw;
-        line-height: 6vw;
-        padding: 0;
-        margin: 0;
-
-    }
-
-    #openingHours {
-        padding-top: 17vw;
-        left: 50%;
-        transform: translateX(-50%);
-        top: 3%;
-    }
-
     .fa-phone-hangup {}
 
-    #contact {
-        align-self: flex-start;
-        line-height: 6vw;
-        margin-top: 137vw;
-        top: 0%;
-    }
+
 
     #icons {
         position: absolute;
@@ -689,4 +681,6 @@ header .navbar a:hover {
         font-size: 6vw;
 
     }
+
+
 }
